--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -1767,7 +1767,7 @@ tech_reverse_advanced_dome: " "
 	tec_cybernetic_path.10050.b.tooltip:0 "The Cybernetic trait will gain the following main module:\n$trait_tec_cybernetic_module_research$"
 	tec_cybernetic_path.10050.c:0 "£job_foundry£ Industrial Grade: §HProduction§!"
 	tec_cybernetic_path.10050.c.tooltip:0 "The Cybernetic trait will gain the following main module:\n$trait_tec_cybernetic_module_industrial$"
-	tec_cybernetic_path.10050.d:0 "£job_unity£ Development Grade: §HCognitive§!"
+	tec_cybernetic_path.10050.d:0 "£unity£ Development Grade: §HCognitive§!"
 	tec_cybernetic_path.10050.d.tooltip:0 "The Cybernetic trait will gain the following main module:\n$trait_tec_cybernetic_module_unity$"
 
 	tec_cybernetic_path.10051.name:0 "Artificial Selection"
