--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -959,68 +959,84 @@ l_english:
 		mod_job_tec_chemical_baron_per_pop_short:0 "\n§G+1§! £mod_job_tec_chemical_baron_add£ per $VALUE$ £pop£"
 		mod_job_tec_chemical_baron_add:0 "$job_tec_chemical_baron$ Jobs"
 
-		job_tec_chemical_drone:0 "Chemical Baron"
-		job_tec_chemical_drone_plural:0 "Chemical Barons"
-		job_tec_chemical_drone_desc:0 "An elite of economically and property-wise rich myriad of crime-lords, bored aristocrats, self-nominated taskmasters and business tycoons, who control the creation, transport and distribution of highly addictive drugs and chemicals to subdue the population... and themselves."
+		job_tec_chemical_distributor:0 "Chem-Smuggler"
+		job_tec_chemical_distributor_plural:0 "$job_tec_chemical_distributor$s"
+		job_tec_chemical_distributor_desc:0 "These overworked individuals are tasked with the production and distribution of chemicals to the rest of the population, regardless of the moral or legal implications."
+		job_tec_chemical_distributor_effect_desc:0 "£job_tec_chemical_distributor£ $job_tec_chemical_distributor_plural$ TO DO."
+		mod_job_tec_chemical_distributor_per_pop:0 "§G+1§! $job_tec_chemical_distributor$ Job Per $VALUE$ Pops"
+		mod_job_tec_chemical_distributor_per_pop_short:0 "\n§G+1§! £mod_job_tec_chemical_distributor_add£ per $VALUE$ £pop£"
+		mod_job_tec_chemical_distributor_add:0 "$job_tec_chemical_distributor$ Jobs"
+
+		job_tec_chemical_drone:0 "Chemical Drone"
+		job_tec_chemical_drone_plural:0 "Chemical Drones"
+		job_tec_chemical_drone_desc:0 "A semi-autonomous type of drone tasked with creating several chemical reactions to improve the drone population efficiency."
 		job_tec_chemical_drone_effect_desc:0 "£job_tec_chemical_drone£ $job_tec_chemical_drone_plural$ TO DO."
 		mod_job_tec_chemical_drone_per_pop:0 "§G+1§! $job_tec_chemical_drone$ Job Per $VALUE$ Pops"
 		mod_job_tec_chemical_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_chemical_drone_add£ per $VALUE$ £pop£"
 		mod_job_tec_chemical_drone_add:0 "$job_tec_chemical_drone$ Jobs"
 
-		building_tec_chemical_baron_generic:0 "Chem-dustrial Hideout"
-		building_tec_chemical_baron_generic_plural:0 "Chem-dustrial Hideouts"
-		building_tec_chemical_baron_generic_desc:0 "TO DO"
-		building_tec_chemical_baron_generic_effect:0 ""
+		job_tec_chemical_distributor_drone:0 "Chemoceptor Drone"
+		job_tec_chemical_distributor_drone_plural:0 "Chemoceptor Drones"
+		job_tec_chemical_distributor_drone_desc:0 "These drones work ceasessly to prepare, secure and transport potent chemical products to distribution and feeding lines on colonies."
+		job_tec_chemical_distributor_drone_effect_desc:0 "£job_tec_chemical_distributor_drone£ $job_tec_chemical_distributor_drone_plural$ TO DO."
+		mod_job_tec_chemical_distributor_drone_per_pop:0 "§G+1§! $job_tec_chemical_distributor_drone$ Job Per $VALUE$ Pops"
+		mod_job_tec_chemical_distributor_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_chemical_distributor_drone_add£ per $VALUE$ £pop£"
+		mod_job_tec_chemical_distributor_drone_add:0 "$job_tec_chemical_distributor_drone$ Jobs"
 
-		building_tec_chemical_baron_motes:0 "Chem-plosives Factory"
-		building_tec_chemical_baron_motes_plural:0 "Chem-plosives Factories"
-		building_tec_chemical_baron_motes_desc:0 "These group of industrial sites produce highly addictive volatile motes, serving as stimulant for simple tasks and an useful explossive; Sometimes, both."
-		building_tec_chemical_baron_motes_desc_hive:0 "These group of industrial sites produce highly addictive volatile motes, serving as stimulant for simple tasks and an useful explossive; Sometimes, both."
-		building_tec_chemical_baron_motes_effect:0 "TO DO"
+		building_tec_chemical_barons_generic:0 "Chem-dustrial Hideout"
+		building_tec_chemical_barons_generic_plural:0 "Chem-dustrial Hideouts"
+		building_tec_chemical_barons_generic_desc:0 "TO DO"
+		building_tec_chemical_barons_generic_effect:0 ""
 
-		building_tec_chemical_baron_crystals:0 "Chem-House of Crystals"
-		building_tec_chemical_baron_crystals_plural:0 "Chem-Houses of Crystals"
-		building_tec_chemical_baron_crystals_desc:0 "Here the best raw crystals are produced and cut, to later be either transported raw as focusing lens or crumbled into micro-particles for recreative and highly addictive consumption, to the point its uses are even considered an ''art''."
-		building_tec_chemical_baron_crystals_desc_hive:0 "Here the best raw crystals are produced and cut, to later be either transported raw as focusing lens or crumbled into micro-particles for drone stimulation, improving off-grid creative thinking within collective thought."
-		building_tec_chemical_baron_crystals_effect:0 "TO DO"
+		building_tec_chemical_barons_motes:0 "Chem-plosives Factory"
+		building_tec_chemical_barons_motes_plural:0 "Chem-plosives Factories"
+		building_tec_chemical_barons_motes_desc:0 "These group of industrial sites produce highly addictive volatile motes, serving as stimulant for simple tasks and an useful explossive; Sometimes, both."
+		building_tec_chemical_barons_motes_desc_hive:0 "These group of industrial sites produce highly addictive volatile motes, serving as stimulant for simple tasks and an useful explossive; Sometimes, both."
+		building_tec_chemical_barons_motes_effect:0 "TO DO"
 
-		building_tec_chemical_baron_gases:0 "Chem-Gas Refinery"
-		building_tec_chemical_baron_gases_plural:0 "Chem-Gas Refineries"
-		building_tec_chemical_baron_gases_desc:0 "Raw after raw of gas-silos filled with refined exotic and highly pure gases, which produce a considerable stimulous in intellectual facilities of those that consume it, also serving as raw material for energy projections and containment."
-		building_tec_chemical_baron_gases_desc_hive:0 "Raw after raw of gas-silos filled with refined exotic and highly pure gases, which produce a considerable stimulous in intellectual facilities of drones, also serving as raw material for energy projections and containment."
-		building_tec_chemical_baron_gases_effect:0 "TO DO"
+		building_tec_chemical_barons_crystals:0 "Chem-House of Crystals"
+		building_tec_chemical_barons_crystals_plural:0 "Chem-Houses of Crystals"
+		building_tec_chemical_barons_crystals_desc:0 "Here the best raw crystals are produced and cut, to later be either transported raw as focusing lens or crumbled into micro-particles for recreative and highly addictive consumption, to the point its uses are even considered an ''art''."
+		building_tec_chemical_barons_crystals_desc_hive:0 "Here the best raw crystals are produced and cut, to later be either transported raw as focusing lens or crumbled into micro-particles for drone stimulation, improving off-grid creative thinking within collective thought."
+		building_tec_chemical_barons_crystals_effect:0 "TO DO"
 
-		building_tec_chemical_baron_zro:0 "Chem-Dust Facility"
-		building_tec_chemical_baron_zro_plural:0 "Chem-Dust Facilities"
-		building_tec_chemical_baron_zro_desc:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerful concoction that satisfies even the most sybarite."
-		building_tec_chemical_baron_zro_desc_hive:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerful concoction that greatly amplifies the drone-hivemind connection."
-		building_tec_chemical_baron_zro_effect:0 "TO DO"
+		building_tec_chemical_barons_gases:0 "Chem-Gas Refinery"
+		building_tec_chemical_barons_gases_plural:0 "Chem-Gas Refineries"
+		building_tec_chemical_barons_gases_desc:0 "Raw after raw of gas-silos filled with refined exotic and highly pure gases, which produce a considerable stimulous in intellectual facilities of those that consume it, also serving as raw material for energy projections and containment."
+		building_tec_chemical_barons_gases_desc_hive:0 "Raw after raw of gas-silos filled with refined exotic and highly pure gases, which produce a considerable stimulous in intellectual facilities of drones, also serving as raw material for energy projections and containment."
+		building_tec_chemical_barons_gases_effect:0 "TO DO"
+
+		building_tec_chemical_barons_zro:0 "Chem-Dust Facility"
+		building_tec_chemical_barons_zro_plural:0 "Chem-Dust Facilities"
+		building_tec_chemical_barons_zro_desc:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerful concoction that satisfies even the most sybarite."
+		building_tec_chemical_barons_zro_desc_hive:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerful concoction that greatly amplifies the drone-hivemind connection."
+		building_tec_chemical_barons_zro_effect:0 "TO DO"
 
 
-		building_tec_chemical_baron_generic_biohive:0 "Chem-Growth"
-		building_tec_chemical_baron_generic_biohive_plural:0 "Chemical Growths"
-		building_tec_chemical_baron_generic_biohive_desc:0 "TO DO"
-		building_tec_chemical_baron_generic_biohive_effect:0 ""
+		building_tec_chemical_barons_generic_biohive:0 "Chem-Growth"
+		building_tec_chemical_barons_generic_biohive_plural:0 "Chemical Growths"
+		building_tec_chemical_barons_generic_biohive_desc:0 "TO DO"
+		building_tec_chemical_barons_generic_biohive_effect:0 ""
 
-		building_tec_chemical_baron_motes_biohive:0 "Chem-plosive Tumor"
-		building_tec_chemical_baron_motes_biohive_plural:0 "Chem-plosive Tumors"
-		building_tec_chemical_baron_motes_biohive_desc:0 "A"
-		building_tec_chemical_baron_motes_biohive_effect:0 "TO DO"
+		building_tec_chemical_barons_motes_biohive:0 "Chem-plosive Tumor"
+		building_tec_chemical_barons_motes_biohive_plural:0 "Chem-plosive Tumors"
+		building_tec_chemical_barons_motes_biohive_desc:0 "A"
+		building_tec_chemical_barons_motes_biohive_effect:0 "TO DO"
 
-		building_tec_chemical_baron_crystals_biohive:0 "Chem-Cristallized Outgrowth"
-		building_tec_chemical_baron_crystals_biohive_plural:0 "Chem-Cristallized Outgrowths"
-		building_tec_chemical_baron_crystals_biohive_desc:0 "A."
-		building_tec_chemical_baron_crystals_biohive_effect:0 "TO DO"
+		building_tec_chemical_barons_crystals_biohive:0 "Chem-Cristallized Outgrowth"
+		building_tec_chemical_barons_crystals_biohive_plural:0 "Chem-Cristallized Outgrowths"
+		building_tec_chemical_barons_crystals_biohive_desc:0 "A."
+		building_tec_chemical_barons_crystals_biohive_effect:0 "TO DO"
 
-		building_tec_chemical_baron_gases_biohive:0 "Chem-Gas Organ"
-		building_tec_chemical_baron_gases_biohive_plural:0 "Chem-Gas Organs"
-		building_tec_chemical_baron_gases_biohive_desc:0 "TO DO."
-		building_tec_chemical_baron_gases_biohive_effect:0 "TO DO"
+		building_tec_chemical_barons_gases_biohive:0 "Chem-Gas Organ"
+		building_tec_chemical_barons_gases_biohive_plural:0 "Chem-Gas Organs"
+		building_tec_chemical_barons_gases_biohive_desc:0 "TO DO."
+		building_tec_chemical_barons_gases_biohive_effect:0 "TO DO"
 
-		building_tec_chemical_baron_zro_biohive:0 "Chem-Dust Gland"
-		building_tec_chemical_baron_zro_biohive_plural:0 "Chem-Dust Glands"
-		building_tec_chemical_baron_zro_biohive_desc:0 "A."
-		building_tec_chemical_baron_zro_biohive_effect:0 "TO DO"
+		building_tec_chemical_barons_zro_biohive:0 "Chem-Dust Gland"
+		building_tec_chemical_barons_zro_biohive_plural:0 "Chem-Dust Glands"
+		building_tec_chemical_barons_zro_biohive_desc:0 "A."
+		building_tec_chemical_barons_zro_biohive_effect:0 "TO DO"
 
 	# /
 
