--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -180,10 +180,52 @@ l_english:
 	district_tec_arcology_wonders_precursor_desc:0 "aaa"
  # /
  # ------------------------------------------------- Machine World
-	district_tec_machine_arcology_housing:0 "Allocation Nexus"
-	district_tec_machine_arcology_housing_plural:0 "$district_tec_machine_arcology_housing$s"
-	district_tec_machine_arcology_housing_desc:0 "Several facilities suited for easy drone storage and maintenance, restoration and stand-by of autonomous units."
-	# Group 0
+	# Regular
+
+
+			job_tec_machine_technician:0 "Dynamo Controller"
+			job_tec_machine_technician_plural:0 "Dynamo Controller"
+			job_tec_machine_technician_desc:0 "The immense energy dynamos across the planet require constant supervision and maintenance."
+			job_tec_machine_technician_effect_desc:0 "£job_tec_machine_technician£ $job_tec_machine_technician_plural$ generate §Y$tec_loc_minerals$§!."
+			mod_job_tec_machine_technician_add:0 "$job_tec_machine_technician$ Jobs"
+			mod_job_tec_machine_technician_per_pop:0 "§G+1§! $job_tec_machine_technician$ Job per $VALUE$ Pops"
+			mod_job_tec_machine_technician_per_pop_short:0 "\n§G+1§! £mod_job_tec_machine_technician_add£ per $VALUE$ £pop£"
+
+			job_tec_machine_technician_drone:0 "Dynamo Drone"
+			job_tec_machine_technician_drone_plural:0 "Dynamo Drone"
+			job_tec_machine_technician_drone_desc:0 "The immense energy dynamos across the planet require constant supervision and maintenance."
+			job_tec_machine_technician_drone_effect_desc:0 "£job_tec_machine_technician_drone£ $job_tec_machine_technician_drone_plural$ generate §Y$tec_loc_minerals$§!."
+			mod_job_tec_machine_technician_drone_add:0 "$job_tec_machine_technician_drone$ Jobs"
+			mod_job_tec_machine_technician_drone_per_pop:0 "§G+1§! $job_tec_machine_technician_drone$ Job per $VALUE$ Pops"
+			mod_job_tec_machine_technician_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_miner_drone_add£ per $VALUE$ £pop£"
+
+			job_tec_machine_miner:0 "Excavation Technician"
+			job_tec_machine_miner_plural:0 "Excavation Technicians"
+			job_tec_machine_miner_desc:0 "While the exterior layers of this world are radically changed, several layers of resources require immediate attention."
+			job_tec_machine_miner_effect_desc:0 "£job_tec_machine_miner£ $job_tec_machine_miner_plural$ generate §Y$tec_loc_minerals$§!."
+			mod_job_tec_machine_miner_add:0 "$job_tec_machine_miner$ Jobs"
+			mod_job_tec_machine_miner_per_pop:0 "§G+1§! $job_tec_machine_miner$ Job per $VALUE$ Pops"
+			mod_job_tec_machine_miner_per_pop_short:0 "\n§G+1§! £mod_job_tec_machine_miner_add£ per $VALUE$ £pop£"
+
+			job_tec_machine_miner_drone:0 "Excavator"
+			job_tec_machine_miner_drone_plural:0 "Excavators"
+			job_tec_machine_miner_drone_desc:0 "Redundant material is an obstacle for the development of the planet - Anything must be recycled and resources extracted properly."
+			job_tec_machine_miner_drone_effect_desc:0 "£job_tec_machine_miner_drone£ $job_tec_machine_miner_drone_plural$ generate §Y$tec_loc_minerals$§!."
+			mod_job_tec_machine_miner_drone_add:0 "$job_tec_machine_miner_drone$ Jobs"
+			mod_job_tec_machine_miner_drone_per_pop:0 "§G+1§! $job_tec_machine_miner_drone$ Job per $VALUE$ Pops"
+			mod_job_tec_machine_miner_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_miner_drone_add£ per $VALUE$ £pop£"
+	# /
+	# ARCOLOGY
+	 # Housing
+		district_tec_machine_arcology_housing_regular:0 "Allocation Terminal"
+		district_tec_machine_arcology_housing_regular_plural:0 "$district_tec_machine_arcology_housing$s"
+		district_tec_machine_arcology_housing_regular_desc:0 "Several habitation facilities suited for efficient and utilitarian housing and restoration, allowing and sustaining a decent population."
+
+		district_tec_machine_arcology_housing_gestalt:0 "Allocation Nexus"
+		district_tec_machine_arcology_housing_gestalt_plural:0 "$district_tec_machine_arcology_housing$s"
+		district_tec_machine_arcology_housing_gestalt_desc:0 "Several facilities suited for easy drone storage and maintenance, restoration and stand-by of autonomous units."
+	 # /
+	 # Group 0
 		# Robot Assembly
 		district_tec_machine_arcology_assembly:0 "Assembly Line"
 		district_tec_machine_arcology_assembly_plural:0 "$district_tec_machine_arcology_assembly$s"
@@ -193,8 +235,8 @@ l_english:
 		district_tec_machine_arcology_cloning:0 "Genesis Line"
 		district_tec_machine_arcology_cloning_plural:0 "$district_tec_machine_arcology_cloning$s"
 		district_tec_machine_arcology_cloning_desc:0 "A large region of the planet destined to suit millions of organic development pods, where genetic material corrections and nano-production of organic tissue take place."
-	# /
-	# Group 1
+	 # /
+	 # Group 1
 		# Alloys
 		district_tec_machine_arcology_foundry:0 "Fabrication Sector"
 		district_tec_machine_arcology_foundry_plural:0 "$district_tec_machine_arcology_foundry$s"
@@ -208,8 +250,8 @@ l_english:
 		district_tec_machine_arcology_research:0 "Technological Sector"
 		district_tec_machine_arcology_research_plural:0 "$district_tec_machine_arcology_research$s"
 		district_tec_machine_arcology_research_desc:0 "TO DO"
-	# /
-	# Group 2
+	 # /
+	 # Group 2
 		district_tec_machine_arcology_unity:0 "Development Sector"
 		district_tec_machine_arcology_unity_plural:0 "$district_tec_machine_arcology_unity$s"
 		district_tec_machine_arcology_unity_desc:0 "TO DO"
@@ -217,11 +259,12 @@ l_english:
 		district_tec_machine_arcology_processing:0 "Processing Sector"
 		district_tec_machine_arcology_processing_plural:0 "$district_tec_machine_arcology_processing$s"
 		district_tec_machine_arcology_processing_desc:0 "TO DO"
-	# /
-	# Group 3
+	 # /
+	 # Group 3
 		district_tec_machine_arcology_maintenance:0 "Maintenance Sector"
 		district_tec_machine_arcology_maintenance_plural:0 "$district_tec_machine_arcology_maintenance$s"
 		district_tec_machine_arcology_maintenance_desc:0 "TO DO"
+	 # /
 	# /
  # /
  # ------------------------------------------------- Hive World
@@ -236,7 +279,84 @@ l_english:
 		pm_tec_gene_bad_planet:0 "Unleashed Virus"
 		pm_tec_gene_bad_planet_desc:0 "§EJust a little cough...§!."
 	# /
+	# Regular
+		district_tec_hive_world_housing_regular:0 "Habitation Nest"
+		district_tec_hive_world_housing_regular_plural:0 "$district_tec_hive_world_housing_biohive$s"
+		district_tec_hive_world_housing_regular_desc:0 "Adapted cavities and towering habitation buildings dominate the landscape of this area, allowing efficient allocation and maintenance of the population."
 
+		district_tec_hive_world_housing_gestalt:0 "Habitation Nest"
+		district_tec_hive_world_housing_gestalt_plural:0 "$district_tec_hive_world_housing_biohive$s"
+		district_tec_hive_world_housing_gestalt_desc:0 "Adapted cavities and towering interconnected spires are where the drones gather when not working to rejuvenate and consume nutrients."
+
+		district_tec_hive_world_assembly:0 "Gestation Chamber"
+		district_tec_hive_world_assembly_plural:0 "$district_tec_hive_world_assembly$s"
+		district_tec_hive_world_assembly_desc:0 "Sub-surface regions filled with litters of newborn and growing drones needing constant maintenance for a prosperous growth and development for the collective."
+
+		district_tec_hive_world_industrial:0 "Industrial Pool"
+		district_tec_hive_world_industrial_plural:0 "$district_tec_hive_world_industrial_biohive$s"
+		district_tec_hive_world_industrial_desc:0 "Large industrial landfills, acid pools and adapted factories where raw materials get converted into advanced products."
+
+		district_tec_hive_world_generator:0 "Energized Nodule"
+		district_tec_hive_world_generator_plural:0 "$district_tec_hive_world_generator$"
+		district_tec_hive_world_generator_desc:0 "A part of this hive-world controlling and taking over massive power plants, generating large amounts of energy."
+
+			job_tec_hive_technician:0 "Energy Reclaimer"
+			job_tec_hive_technician_plural:0 "Energy Reclaimers"
+			job_tec_hive_technician_desc:0 "These workers safely maintain and extract energy from the planet energized nodules."
+			job_tec_hive_technician_effect_desc:0 "£job_tec_hive_technician£ $job_tec_hive_technician_plural$ generate §Y$tec_loc_energy$§!."
+			mod_job_tec_hive_technician_add:0 "$job_tec_hive_technician$ Jobs"
+			mod_job_tec_hive_technician_per_pop:0 "§G+1§! $job_tec_hive_technician$ Job per $VALUE$ Pops"
+			mod_job_tec_hive_technician_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_technician_add£ per $VALUE$ £pop£"
+
+			job_tec_hive_technician_drone:0 "Energy Reclaiming Drone"
+			job_tec_hive_technician_drone_plural:0 "Energy Reclaiming Drones"
+			job_tec_hive_technician_drone_desc:0 "Specialized drones that reclaim energy from the planet energized nodules."
+			job_tec_hive_technician_drone_effect_desc:0 "£job_tec_hive_technician_drone£ $job_tec_hive_technician_drone_plural$ generate §Y$tec_loc_energy$§!."
+			mod_job_tec_hive_technician_drone_add:0 "$job_tec_hive_technician_drone$ Jobs"
+			mod_job_tec_hive_technician_drone_per_pop:0 "§G+1§! $job_tec_hive_technician_drone$ Job per $VALUE$ Pops"
+			mod_job_tec_hive_technician_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_technician_drone_add£ per $VALUE$ £pop£"
+
+		district_tec_hive_world_mining:0 "Mining Pit"
+		district_tec_hive_world_mining_plural:0 "$district_tec_hive_world_mining$"
+		district_tec_hive_world_mining_desc:0 "Massive tendrils perforate cavities like overextending roots towards rich mantle deposits."
+
+			job_tec_hive_miner:0 "Core Miner"
+			job_tec_hive_miner_plural:0 "Core Miners"
+			job_tec_hive_miner_desc:0 "Guided by the outgrows of a sentient world, these miners are able to reach deep layers of the planet mantle."
+			job_tec_hive_miner_effect_desc:0 "£job_tec_hive_miner£ $job_tec_hive_miner_plural$ generate §Y$tec_loc_minerals$§!."
+			mod_job_tec_hive_miner_add:0 "$job_tec_hive_miner$ Jobs"
+			mod_job_tec_hive_miner_per_pop:0 "§G+1§! $job_tec_hive_miner$ Job per $VALUE$ Pops"
+			mod_job_tec_hive_miner_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_miner_add£ per $VALUE$ £pop£"
+
+			job_tec_hive_miner_drone:0 "Core Mining Drone"
+			job_tec_hive_miner_drone_plural:0 "Core Mining Drones"
+			job_tec_hive_miner_drone_desc:0 "Instinctively driven towards rich veins, these drones extract rich minerals from their sentient world."
+			job_tec_hive_miner_drone_effect_desc:0 "£job_tec_hive_miner_drone£ $job_tec_hive_miner_drone_plural$ generate §Y$tec_loc_minerals$§!."
+			mod_job_tec_hive_miner_drone_add:0 "$job_tec_hive_miner_drone$ Jobs"
+			mod_job_tec_hive_miner_drone_per_pop:0 "§G+1§! $job_tec_hive_miner_drone$ Job per $VALUE$ Pops"
+			mod_job_tec_hive_miner_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_miner_drone_add£ per $VALUE$ £pop£"
+
+		district_tec_hive_world_food:0 "Biomass Farm"
+		district_tec_hive_world_food_plural:0 "Biomass Farms"
+		district_tec_hive_world_food_desc:0 "Extensive regions of the planet are now secluded biological extensions where biomatter is farmed and recycled for latter usage."
+
+			job_tec_hive_farmer:0 "Biomatter Harvester"
+			job_tec_hive_farmer_plural:0 "Biomatter Harvesters"
+			job_tec_hive_farmer_desc:0 "The rich biomass of an interconnected planet must be collected by able hands (or protrusions (or tentacles))."
+			job_tec_hive_farmer_effect_desc:0 "£job_tec_hive_farmer£ $job_tec_hive_farmer_plural$ generate §Y$tec_loc_food$§!."
+			mod_job_tec_hive_farmer_add:0 "$job_tec_hive_farmer$ Jobs"
+			mod_job_tec_hive_farmer_per_pop:0 "§G+1§! $job_tec_hive_farmer$ Job per $VALUE$ Pops"
+			mod_job_tec_hive_farmer_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_farmer_add£ per $VALUE$ £pop£"
+
+			job_tec_hive_farmer_drone:0 "Harvester Drone"
+			job_tec_hive_farmer_drone_plural:0 "Harvester Drones"
+			job_tec_hive_farmer_drone_desc:0 "These drones caress and collect rich biomass to suit the collective needs."
+			job_tec_hive_farmer_drone_effect_desc:0 "£job_tec_hive_farmer_drone£ $job_tec_hive_farmer_drone_plural$ generate §Y$tec_loc_food$§!."
+			mod_job_tec_hive_farmer_drone_add:0 "$job_tec_hive_farmer_drone$ Jobs"
+			mod_job_tec_hive_farmer_drone_per_pop:0 "§G+1§! $job_tec_hive_farmer_drone$ Job per $VALUE$ Pops"
+			mod_job_tec_hive_farmer_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_farmer_drone_add£ per $VALUE$ £pop£"
+
+	# /
 	district_tec_hive_arcology_housing:0 "Dwelling Chamber"
 	district_tec_hive_arcology_housing_plural:0 "$district_tec_hive_arcology_housing$s"
 	district_tec_hive_arcology_housing_desc:0 "TO DO"
