--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -780,8 +780,109 @@
 
 # ------------------------------------------------- BIONICS
  # --------------- T0
+	# Main
+	trait_tec_bioware_main:0 "Integrated Bioware"
+	trait_tec_bioware_main_desc:0 "§LTO DO.§!\n"
+	leader_trait_tec_bioware_main:0 "$trait_tec_bioware_main$"
+	leader_trait_tec_bioware_main_desc:0 "§LTO DO§!"
+	trait_tec_bioware_main_tooltip:0 "TO DO"
+
+	# Skeletons
+	trait_tec_bioware_exoskeleton:0 "Adaptive Bio-Frame"
+	trait_tec_bioware_exoskeleton_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_EXOSKELETON_EFFECT:0 "TO DO"
+
+	# Increases research capacities + extra per intellect trait
+	trait_tec_bioware_brain:0 "Artificial Synapses"
+	trait_tec_bioware_brain_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_BRAIN_EFFECT:0 "TO DO"
+
+	# fertile?
+	trait_tec_bioware_fertile:0 "Imprinted Replicators"
+	trait_tec_bioware_fertile_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_FERTILE_EFFECT:0 "TO DO"
+
+	# strong pops + extra per strenght trait
+	trait_tec_bioware_robust:0 "Neo-tergumentary System"
+	trait_tec_bioware_robust_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_ROBUST_EFFECT:0 "TO DO"
+
+	# unity + extra per unity trait
+	trait_tec_bioware_unity:0 "Bioneural Relay"
+	trait_tec_bioware_unity_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_UNITY_EFFECT:0 "TO DO"
+
+	# more resistance?
+	trait_tec_bioware_resilience:0 "Septic Nano-Surgeons"
+	trait_tec_bioware_resilience_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_RESILIENCE_EFFECT:0 "TO DO"
+
+	# adapts to habitability?
+	trait_tec_bioware_biosculptors:0 "Intelligent Bio-Sculptors"
+	trait_tec_bioware_biosculptors_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_BIOSCULPTORS_EFFECT:0 "TO DO"
+
+	# Housing
+	trait_tec_bioware_housing:0 "Organ Miniaturizers"
+	trait_tec_bioware_housing_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_HOUSING_EFFECT:0 "TO DO"
+
+	# workers
+	trait_tec_bioware_worker:0 "Adrenal Implants"
+	trait_tec_bioware_worker_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_WORKER_EFFECT:0 "TO DO"
+
+	# Rulers
+	trait_tec_bioware_rulers:0 "Control Cyber-Dendrites"
+	trait_tec_bioware_rulers_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_RULERS_EFFECT:0 "TO DO"
+
+	# specialist
+	trait_tec_bioware_specialist:0 "Complementary Neuro-Spine"
+	trait_tec_bioware_specialist_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_SPECIALIST_EFFECT:0 "TO DO"
+
+	# basic resources
+	trait_tec_bioware_menial:0 "Grafted Bio-Servos"
+	trait_tec_bioware_menial_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_MENIAL_EFFECT:0 "TO DO"
+
+	# Empire size
+	trait_tec_bioware_empiresize:0 "Self-Regulatory Processors"
+	trait_tec_bioware_empiresize_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_EMPIRESIZE_EFFECT:0 "TO DO"
+
+	# NEG production
+	trait_tec_bioware_neg_a:0 "A"
+	trait_tec_bioware_neg_a_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_NEG_A_EFFECT:0 "TO DO"
+
+	# NEG production
+	trait_tec_bioware_neg_a:0 "A"
+	trait_tec_bioware_neg_a_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_NEG_A_EFFECT:0 "TO DO"
+
+	# NEG upkeep
+	trait_tec_bioware_neg_a:0 "A"
+	trait_tec_bioware_neg_a_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_NEG_A_EFFECT:0 "TO DO"
+
+	# NEG 
+	trait_tec_bioware_neg_a:0 "A"
+	trait_tec_bioware_neg_a_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_NEG_A_EFFECT:0 "TO DO"
+
+	# Rulers
+	trait_tec_bioware_neg_a:0 "A"
+	trait_tec_bioware_neg_a_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_NEG_A_EFFECT:0 "TO DO"
 
  # --------------- T1/2
+	# Skeletons
+	trait_tec_bioware_symbioskeleton:0 "Symbiotic Frame"
+	trait_tec_bioware_symbioskeleton_desc:0 "§LTo do.§!"
+	TRAIT_TEC_BIOWARE_SYMBIOSKELETON_EFFECT:0 "TO DO"
+
 
 # ------------------------------------------------- SYNTHETICS
  # --------------- T0
