--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -276,8 +276,20 @@ l_english:
 
 	# /
 	# Modifiers
-		pm_tec_gene_bad_planet:0 "Unleashed Virus"
-		pm_tec_gene_bad_planet_desc:0 "§EJust a little cough...§!."
+		pm_tec_hiveworld_newborn:0 "A"
+		pm_tec_hiveworld_newborn_desc:0 "§EA.§!"
+
+		pm_tec_hiveworld_young:0 "A"
+		pm_tec_hiveworld_young_desc:0 "§EA.§!"
+
+		pm_tec_hiveworld_mature:0 "A"
+		pm_tec_hiveworld_mature_desc:0 "§EA.§!"
+
+		pm_tec_hiveworld_venerable:0 "A"
+		pm_tec_hiveworld_venerable_desc:0 "§EA.§!"
+
+		pm_tec_hiveworld_ancient:0 "A"
+		pm_tec_hiveworld_ancient_desc:0 "§EA.§!"
 	# /
 	# Regular
 		district_tec_hive_world_housing_regular:0 "Habitation Nest"
