Ai auth leader upkeep fixes

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -435,7 +435,8 @@ tec_loc_empire_scope_effects: "£empire£ §YEmpire§!"
 tec_loc_planet_scope_effects: "£planet£ §YPlanet§!"
 tec_loc_science_ship_scope_effects: "£planet£ §YPlanet§!"
 
-
+tec_cui_tec_no_ai_empire_leader_loc: "Leader"
+tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
 
 # --------------------------- ANNOTATIONS --------------------------------
 
